feat: config application.properties H2DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=manager.events.calendar
+
+# URL do banco H2 em memória
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# Usuário e senha padrão do H2
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Driver JDBC
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Configurações do JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Ativa o console web do H2 (muito útil para testes)
+spring.h2.console.enabled= true
+spring.h2.console.path=/h2-console
